--- a/index.html
+++ b/index.html
@@ -12,5 +12,85 @@
 
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+<nav>
+  <a href="services.html">Services</a>
+  <a href= "#product"> Product</a>
+  <a href= "#vision">Vision</a>
+  <a href= "#features">Features</a>
+  <a href= "#about">About</a>
+  <a href="#contact">Contact</a>
+  <img id="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+</nav>
+
+
+<!-- Title in the middle of the site-->
+  <header id="title-div">
+    <div id="web-words">
+      <h1>Innovation<br> On<br>demand</h1>
+      <button>Get Started</button>
+    </div>
+
+    <div id="circle_div"> 
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </div>  
+  </header>
+
+<!-- Start of the Features content-->
+<div id="container1">
+  <section id="features">  
+    <h3>Features</h3>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+
+  <!-- About Content-->
+
+  <section id="about">
+    <h3>About</h3>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+</div>
+
+<!-- some how get this img in the middle of the screen span maybe-->
+<div id="img_div">
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+</div>
+
+<div id="container2">
+<!-- Services Content-->  
+<section class="box">  
+  <h3>Services</h3>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</section>
+
+<!-- Product content-->
+<section clas="box">
+  <h3>Product</h3>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</section>
+
+<!--Vision Section-->
+<section class="box">
+  <h3>Vision</h3>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</section> 
+</div>
+
+<!--Start of the Contact info-->  
+<footer id="contact"> 
+<h3>Contact</h3>
+<ul>
+  <li>123 Way 456 Street</li>
+  <li>Somewhere, USA</li>
+</ul>
+
+<p class="bottom_ps">1 (888) 888-8888</p>
+
+<p>sales@greatidea.io</p>
+
+<p id="copyright">Copyright Great Idea! 2018</p>
+
+</footer>    
+
+
 </body>
 </html>
