--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Great Idea - Responsive I</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
@@ -12,6 +13,9 @@
 
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+<div id="logo-small">
+  <img id="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+</div>
 <nav>
   <a href="services.html">Services</a>
   <a href= "#product"> Product</a>
@@ -19,7 +23,9 @@
   <a href= "#features">Features</a>
   <a href= "#about">About</a>
   <a href="#contact">Contact</a>
-  <img id="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  <div id="logo-div">
+    <img id="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  </div>
 </nav>
 
 
@@ -37,14 +43,14 @@
 
 <!-- Start of the Features content-->
 <div id="container1">
-  <section id="features">  
+  <section class="box">  
     <h3>Features</h3>
     <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   </section>
 
   <!-- About Content-->
 
-  <section id="about">
+  <section class="box">
     <h3>About</h3>
     <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   </section>
@@ -63,7 +69,7 @@
 </section>
 
 <!-- Product content-->
-<section clas="box">
+<section class="box">
   <h3>Product</h3>
   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 </section>
